--- a/.github/workflows/daily-fetch.yml
+++ b/.github/workflows/daily-fetch.yml
@@ -2,11 +2,11 @@ name: Algorithm Collection
 
 on:
   schedule:
-    # Multiple runs to ensure success - at least one will work
-    - cron: '0 9 * * *'   # 9 AM UTC  
-    - cron: '0 14 * * *'  # 2 PM UTC (backup)
-    - cron: '0 20 * * *'  # 8 PM UTC (final backup)
-  workflow_dispatch:  # Allow manual triggering for testing
+    - cron: '0 9 * * *'   # Morning
+    - cron: '0 14 * * *'  # Afternoon  
+    - cron: '0 19 * * *'  # Evening
+    - cron: '30 21 * * *' # Night
+  workflow_dispatch:
 
 permissions:
   contents: write  # Required to push commits
@@ -37,20 +37,14 @@ jobs:
         git config --local user.email "101785779+Arefin090@users.noreply.github.com"
         git config --local user.name "Arefin N. Sojol"
     
-    - name: Check for existing problems today
-      id: check_today
+    - name: Check repository status
+      id: check_status
       run: |
-        today=$(date +%Y-%m-%d)
-        if [ -d "problems" ] && ls problems/ | grep -q "^${today}_"; then
-          echo "exists=true" >> $GITHUB_OUTPUT
-          echo "Problem already exists for today: ${today}"
-        else
-          echo "exists=false" >> $GITHUB_OUTPUT
-          echo "No problem found for today: ${today}"
-        fi
+        # Always run - no daily limits
+        echo "ready=true" >> $GITHUB_OUTPUT
     
     - name: Collect algorithm
-      if: steps.check_today.outputs.exists == 'false'
+      if: steps.check_status.outputs.ready == 'true'
       run: |
         python scripts/fetch_problem.py
       env:
@@ -59,29 +53,17 @@ jobs:
     
     - name: Check for changes
       id: check_changes
-      if: steps.check_today.outputs.exists == 'false'
+      if: steps.check_status.outputs.ready == 'true'
       run: |
         if git diff --quiet && git diff --cached --quiet; then
           echo "changes=false" >> $GITHUB_OUTPUT
-          echo "No changes detected"
         else
           echo "changes=true" >> $GITHUB_OUTPUT
-          echo "Changes detected"
         fi
     
     - name: Push changes
-      if: steps.check_today.outputs.exists == 'false' && steps.check_changes.outputs.changes == 'true'
+      if: steps.check_status.outputs.ready == 'true' && steps.check_changes.outputs.changes == 'true'
       run: |
         git push origin main
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    
-    - name: Summary
-      run: |
-        if [ "${{ steps.check_today.outputs.exists }}" == "true" ]; then
-          echo "✅ Already have today's algorithm - skipping"
-        elif [ "${{ steps.check_changes.outputs.changes }}" == "true" ]; then
-          echo "✅ Successfully added new algorithm"
-        else
-          echo "ℹ️  No new algorithms available"
-        fi
